Make outline visible on vocabulary headline (display: block prevented it)

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -342,7 +342,6 @@ ul.dropdown-menu > li:last-child > input {
 
 .header-left > h1 > a {
   color: #ffffff;
-  display: block;
   height: 50px;
 }
 
